suggestions from @gitti1 and @maxheld83

--- a/vignettes/SKG2020_submission/literature.bib
+++ b/vignettes/SKG2020_submission/literature.bib
@@ -51,7 +51,7 @@
                   Ioannidis, Alexandros and
                   Bigarella, Chiara and
                   Summan, Friedrich},
-  title        = {OpenAIRE Research Graph Dump},
+  title        = {{OpenAIRE Research Graph Dump}},
   month        = dec,
   year         = 2019,
   publisher    = {Zenodo},
@@ -124,7 +124,7 @@
                   Manola, Natalia and
                   Schirrwagen, Jochen and
                   Principe,  Pedro},
-  title        = {The OpenAIRE Research Graph Data Model},
+  title        = {{The OpenAIRE Research Graph Data Model}},
   month        = apr,
   year         = 2019,
   publisher    = {Zenodo},
@@ -160,7 +160,7 @@
   }
 
   @Book{rmarkdown,
-    title = {R Markdown: The Definitive Guide},
+    title = {{R Markdown}: The Definitive Guide},
     author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
     publisher = {Chapman and Hall/CRC},
     address = {Boca Raton, Florida},
