--- a/vignettes/SKG2020_submission/lncs.sty
+++ b/vignettes/SKG2020_submission/lncs.sty
@@ -44,8 +44,8 @@ $endif$
 
 \begin{document}
 %
-\title{Accessing and analysing the OpenAIRE Research Graph Dump with R}\thanks{
-This work was supported by the European Commission: OpenAIRE-Advance - OpenAIRE Advancing Open Scholarship (777541).}}
+\title{Accessing and analysing the OpenAIRE Research Graph Dump with R\thanks{
+This work was supported by the European Commission: OpenAIRE-Advance (777541).}}
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
@@ -71,7 +71,7 @@ This work was supported by the European Commission: OpenAIRE-Advance - OpenAIRE 
 \begin{abstract}
 The OpenAIRE Research Graph Dump provides a wide range of metadata about grant-supported research publications. Here, we present the R package openairegraph with helpers for splitting, de-compressing and parsing this data release. Our implementation aims at data science practitioners and re- searchers alike who wish to conduct their own statistical analysis using the OpenAIRE Research Graph, but are wary of handling large data. Following the the R package structure provides a standard way to ensure the computational reproducibility of our implementation. The availability of such reliable tools for statistical computing environments can greatly improve re-use of big scholarly data dumps in quantitative science studies and data-based decision-making.
 
-\keywords{OpenAIRE  \and big scholarly data \and R}
+\keywords{OpenAIRE  \and Big Scholarly Data \and R}
 \end{abstract}
 %
 $body$
