--- a/vignettes/SKG2020_submission/skg2020_submission.Rmd
+++ b/vignettes/SKG2020_submission/skg2020_submission.Rmd
@@ -35,9 +35,9 @@ library(here)
 
 OpenAIRE has collected and interlinked scholarly data from various openly available sources for over ten years. In December 2019, this European open science network released the OpenAIRE Research Graph Dump [@manghi_paolo_2019_3516918], a big scholarly dataset that comprises metadata about more than 100 million research publications and 18 million research datasets, as well as the relationships between them. These metadata are furthermore connected to open access locations and disambiguated information about persons, organisations and funders. 
 
-Like most big scholarly data dumps, the OpenAIRE Research Graph offers many data analytics opportunities, but working with it can be challenging for data science practitioners [@Xia_2017]. One reason is the size of the data release. Although already split into several files, most of these data files are too large to fit into the memory of a moderately equipped personal computer when directly imported into statistical computing environments. Another challenge is the format. Statistical methods require tidy data, i.e. datasets with a rectangular structure made up of unambiguous columns and rows [@Wickham_2014]. The dump, however, consists of compressed XML-files following the comprehensive OpenAIRE data model [@manghi_paolo_2019_2643199], from which only certain elements may be needed for a specific data analysis.
+Like most big scholarly data dumps, the OpenAIRE Research Graph offers many opportunities for data analysis, but working with it can be challenging for data science practitioners [@Xia_2017]. One reason is the size of the data release. Although already split into several files, most of these data files are too large to fit into the memory of a moderately equipped personal computer when directly imported into statistical computing environments. Another challenge is the format. Statistical methods require tidy data, i.e. datasets with a rectangular structure made up of unambiguous columns and rows [@Wickham_2014]. The dump, however, consists of compressed XML-files following the comprehensive OpenAIRE data model [@manghi_paolo_2019_2643199], from which only certain elements may be needed for a specific data analysis.
 
-In this paper, we will introduce the R package openairegraph that helps to transform the large OpenAIRE Research Graph Dump into relevant small datasets for analytical purposes. It aims at data science practitioners and researchers alike who wish to conduct their own statistical analysis using the OpenAIRE Research Graph, but are wary of handling its large data dumps. Our implementation does not only consist of tools that allow you to explore and parse specific information from the OpenAIRE Research Graph Dump. The R package structure also provides a standard way to ensure the computational reproducibility of these tools. To demonstrate the usefulness of our implementation, we will benchmark compliance with the open access mandate in the European HORIZON 2020 funding programme.
+In this paper, we will introduce the R package openairegraph that helps to transform the large OpenAIRE Research Graph Dump into relevant small datasets for analytical purposes. It aims at data science practitioners and researchers alike who wish to conduct their own statistical analysis using the OpenAIRE Research Graph, but are wary of handling its large data dumps. Our implementation does not only consist of tools that allow to explore and parse specific information from the OpenAIRE Research Graph Dump. The R package structure also provides a standard way to ensure the computational reproducibility of these tools. To demonstrate the usefulness of our implementation, we will benchmark compliance with the open access mandate in the European HORIZON 2020 funding programme.
 
 # Background
 
@@ -97,7 +97,7 @@ First, we obtained the locations of the de-coded XML records. After that, we rea
 
 Documentation is an essential part of the R package workflow. For each parser, we described the usage, as well as the returned output. The latter is represented as data coding tables with an description of each variables, making it more convenient to grasp the otherwise complex structure of the OpenAIRE Research Graph. While executable examples are provided for each function, an introductory vignette, an executable long-form documentation written in R Markdown[@rmarkdown], demonstrates a workflow using the package. All documentation is automatically rendered to an R manual, and to a package website[^2] created with pkgdown [@pkgdown].
 
-While writing the package, we collected exemplary OpenAIRE Research Graph records and tested our parser against these files. The package provides testthat [@testthat] unit testing for these cases to make sure that the parsers work as expected. Along with the general automated checking routines for a R package build, these tests will be executed on a continuous integration services after every code updates. The package is available via GitHub, and can be installed from it. Following good practices for research software citation and preservation, releases are archived with Zenodo, which issues DOIs for persistent identification. Altogether, this release workflow enables that the package is "both archived for reproducibility and actively maintained for reusability" [@hasselbring2019fair].
+While writing the package, we collected exemplary OpenAIRE Research Graph records and tested our parser against these files. The package provides testthat [@testthat] unit testing for these cases to make sure that the parsers work as expected. Along with the general automated checking routines for a R package build, these tests will be executed on a continuous integration services after every code updates. The package is available via GitHub, and can be installed from it. Following good practices for research software citation and preservation, releases are archived via Zenodo, which issues DOIs for persistent identification. Altogether, this release workflow enables that the package is "both archived for reproducibility and actively maintained for reusability" [@hasselbring2019fair].
 
 # Use-Case
 
@@ -137,10 +137,11 @@ oa_monitor_ec <- pubs_projects %>%
   mutate(all_pub = as.integer(oa_n / oa_prop)) 
   ```
 
-As a start, we imported and transformed the whole h2020_results.gz dump file following the above-described methods. The resulting dataset comprises 84,781 literature publications from 9,008 H2020 projects. After that, we identified H2020 projects with participation from the University of Göttingen using data from CORDIS, the European Commission’s research information portal. We calculated the open access share per project affiliated with the university and the open access shares for each project in the corresponding H2020 activity like European Research Council grants or Marie Skłodowska-Curie activities.
+As a start, we imported and transformed the whole h2020_results.gz dump file following the above-described methods. The resulting dataset comprises 84,781 literature publications from 9,008 H2020 projects. After that, we identified H2020 projects with participation from the University of Göttingen using data from CORDIS, the European Commission’s research information portal. We calculated the open access share per project affiliated with the university, and compared them by H2020 funding stream, e.g. European Research Council (ERC) grants or Marie Skłodowska-Curie actions (MCSA). 
 
 
-```{r, fig.cap = "Open Access Compliance Rates of Horizon 2020 projects affiliated with the University of Göttingen (purple dots) relative to the overall performance of the coressponding funding activities, visualised as a box plot. Only projects with at least five publications were considered. Data: OpenAIRE Research Graph[@manghi_paolo_2019_3516918]"}
+
+```{r, fig.cap = "Open Access Compliance Rates of Horizon 2020 projects affiliated with the University of Göttingen (purple dots) relative to the overall performance of the corresponding funding activities, visualised as a box plot. Only projects with at least five publications were considered. Data: OpenAIRE Research Graph[@manghi_paolo_2019_3516918]"}
 # load local copy downloaded from the EC open data portal
 cordis_org <-
   readr::read_delim(
@@ -208,13 +209,13 @@ ggplot(goe_oa, aes(funding_scheme, oa_prop)) +
 
 ```
 
-Figure 1 shows that some H2020-projects with University of Göttingen participation have an uptake of open access to grant-supported publications that is above the average in the peer group. At the same time, others perform below expectation. Together, this provides a valuable insight into open access compliance at the university-level, especially for research administrators who have to take account of field variations while assessing publication practises [@Hicks_2015].
+Figure 1 shows that some H2020-projects with University of Göttingen participation have an uptake of open access to grant-supported publications that is above the average in the peer group. At the same time, others perform below expectation. Together, this provides valuable insights into open access compliance at the institutional level, especially for research administrators who would like to consider differences by research field and grant type while assessing publication practises.
 
 # Discussion and Conclusion
 
 In summary, we have presented the R package openairegraph, and described how it helps data science practitioners working primarily in R to access and analyse the OpenAIRE Research Graph Dump. R packages, which follow a standardized structure including documentation and testing, are a well-established way to share code. <!--R code is not limited to statistical methods, but can be also used to access various types of scholarly data sources.--> Wrapping helpers into a R package, allows data science practitioners to explore big scholarly data dumps while shielding them from its complexity. As our use case has demonstrated, this approach provides a reliable way to investigate large variations in scholarly communication in a reproducible manner.
 
-Not all data science practitioners use R. We encourage helpers for analysing big scholarly data dumps in other programming languages as well. Their implementation can draw from the standardized way how R packaging document, test and share code for statistical analyses. Implementing such tools for statistical computing environments can greatly improve re-use of big scholarly data dumps in quantitative science studies and data-driven decision-making.
+Not all data science practitioners use R. We encourage others to develop helpers for analysing big scholarly data dumps in other programming languages as well. Their implementation can draw from the standardized way how R packaging documents, tests and shares code for statistical analyses. Implementing such tools for statistical computing environments can greatly improve re-use of big scholarly data dumps in quantitative science studies and data-driven decision-making.
 
 # References
 
