--- a/vignettes/SKG2020_submission/skg2020_submission.Rmd
+++ b/vignettes/SKG2020_submission/skg2020_submission.Rmd
@@ -29,7 +29,7 @@ knitr::opts_chunk$set(
   echo = FALSE
 )
 library(openairegraph)
-library(magrittr)
+library(tidyverse)
 ```
 
 # Introduction
@@ -128,19 +128,17 @@ A main purpose of the OpenAIRE Research Graph, which links grants to publication
 # the parsed dump is too large to be tracked with GIT
 # Here's how to download it and put it in the 
 # folder of this vignette
+library(tidyverse)
 download.file(
   url = "https://github.com/subugoe/scholcomm_analytics/releases/download/oaire_graph_post/h2020_parsed.json.gz", 
-  here::here("vignettes/SKG2020_submission", "h2020_parsed.json.gz")
+  destfile = "data/h2020_parsed.json.gz"
 )
 oaire_df <- jsonlite::stream_in(
-  con = file(
-    here::here("vignettes/SKG2020_submission", "h2020_parsed.json.gz")
-  ),
+  con = file("data/h2020_parsed.json.gz"),
   verbose = TRUE
 ) %>%
   tibble::as_tibble()
 
-library(tidyverse)
 pubs_projects <- oaire_df %>%
   select(id, type, best_access_right, linked_projects) %>%
   unnest_legacy(linked_projects) 
@@ -171,9 +169,9 @@ download.file(
   destfile = "data/cordis-h2020organizations.csv"
 )
 cordis_org <- readr::read_delim(
-  here::here("data", "cordis-h2020organizations.csv"),
+  file = "data/cordis-h2020organizations.csv",
   delim = ";",
-  locale = locale(decimal_mark = ",")
+  locale = readr::locale(decimal_mark = ",")
 ) %>%
   # data cleaning
   mutate_if(is.double, as.character)
