--- a/vignettes/intro_h2020/oaire_graph_post.Rmd
+++ b/vignettes/intro_h2020/oaire_graph_post.Rmd
@@ -154,6 +154,15 @@ I therefore recommend to back up the resulting data, instead of un-packing the w
 
 ```{r}
 jsonlite::stream_out(oaire_df, file("data/h2020_parsed_short.json"))
+download.file(
+  url = "https://github.com/subugoe/scholcomm_analytics/releases/download/oaire_graph_post/h2020_parsed.json.gz", 
+  destfile = "data/h2020_parsed.json.gz"
+)
+oaire_df <- jsonlite::stream_in(
+  file("data/h2020_parsed.json.gz"), 
+  verbose = FALSE
+) %>%
+  tibble::as_tibble()
 ```
 
 ## Use case: Monitoring the Open Access Compliance across H2020 grant-supported projects at the institutional level
@@ -166,7 +175,7 @@ In this use case, I will illustrate how to make use of the OpenAIRE Research Gra
 
 As a start, I load a dataset, which was compiled following the above-described methods using the whole `h2020_results.gz` dump.
 
-```{r eval=FALSE}
+```{r}
 oaire_df <-
   jsonlite::stream_in(file("data/h2020_parsed.json"), verbose = FALSE) %>%
   tibble::as_tibble()
@@ -274,10 +283,7 @@ About 77% of research publications under the H2020 open access mandate are openl
 Because of their large variations, I want to put the open access rates of H2020-funded projects in context when presenting the share for projects affiliated with the University of Göttingen. Again, the data analysis starts with loading the previously backed up file with decoded and parsed data, choosing project and access information from it. 
 
 
-```{r, eval=FALSE}
-oaire_df <- jsonlite::stream_in(file("data/h2020_parsed.json"), verbose = FALSE) %>%
-  tibble::as_tibble()
-
+```{r}
 pubs_projects <- oaire_df %>%
   select(id, type, best_access_right, linked_projects) %>%
   unnest(linked_projects) 
